# spotify-mistake

./: .gitignore  Cargo.toml
src/: async_adapter.rs  bot.rs  control.rs  db.rs  ext.rs  history.rs  history_view.rs  image_cache.rs  list_view.rs  main.rs  player_state.rs  progress.rs  queue_view.rs  request.rs  scrollable.rs  spotify_lyrics.rs  tab_selection.rs  tab_view.rs  twitch.rs  util.rs  views.rs  volume_state.rs
src/control/: active_control.rs  info_panel.rs  lyrics_panel.rs  player_control.rs
src/views/: history_view.rs  image_view.rs  list_view.rs  queue_view.rs  request_view.rs
