[package]
name = "spotify-mistake"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
alto_logger     = "0.4.0"
anyhow          = "1.0.71"
eframe          = { version = "0.22.0", default-features = false, features = ["persistence","glow"] }
egui            = { version = "0.22.0", default-features = false }
fastrand        = "1.9.0"
hashbrown       = "0.13.2"
image           = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
librespot       = { git = "https://github.com/librespot-org/librespot", rev = "c964102a349589d644baef5f43a566d6d1e151f1" }
log             = { version = "0.4.17", features = ["std"] }
rspotify        = "0.11.7"
serde           = { version = "1.0.163", features = ["derive"] }
serde_json      = "1.0.96"
simple_env_load = "0.2.0"
tokio           = { version = "1.28.2", features = ["sync", "net", "io-util", "macros", "rt-multi-thread"] }
twitch_message  = { git = "https://github.com/museun/twitch_message", rev = "3ed7a259565bcf172a03f7f3d15a266442076845", version = "0.1.2", features = ["serde"] }
url             = "2.3.1"
