[package]
name = "spotify-mistake"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
alto_logger     = "0.4.0"
anyhow          = "1.0.71"
eframe          = { version = "0.22.0", default-features = false, features = ["persistence", "glow"] }
egui            = { version = "0.22.0", default-features = false }
fastrand        = "1.9.0"
hashbrown       = "0.13.2"
image           = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
librespot       = { git = "https://github.com/librespot-org/librespot", rev = "4d402e690c67457ca2d462670db39330bbceb4cf" }
log             = { version = "0.4.18", features = ["std"] }
rspotify        = "0.11.7"
rusqlite        = { version = "0.29.0", features = ["bundled", "time", "uuid"] }
serde           = { version = "1.0.163", features = ["derive"] }
serde_json      = "1.0.96"
simple_env_load = "0.2.0"
time            = { version = "0.3.21", features = ["formatting", "serde"] }
tokio           = { version = "1.28.2", features = ["sync", "net", "io-util", "macros", "rt-multi-thread"] }
twitch_message  = { git = "https://github.com/museun/twitch_message", rev = "3ed7a259565bcf172a03f7f3d15a266442076845", version = "0.1.2", features = ["serde"] }
url             = "2.3.1"
uuid            = { version = "1.3.3", features = ["v4", "serde"] }
